--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <p class="featured-desc">API288 - Situs Online Terpercaya yang membayar semua kemenangan member hingga lunas. Setiap pembayaran pada situs kami dilakukan dengan cara transfer ke rekening tujuan yang sudah di daftarkan pada situs online kami, Pembayaran hanya dapat di proses jika rekening yang di daftarkan telah valid dan dapat di transfer.</p>
                 <a href="https://api288y.com/"><button class="featured-button">Login</button> </a>
             </div>
+<marquee class="teks-berjaalan" direction="left" scrollamount="5">SELAMAT DATANG DI API288, LIVE CASINO &amp; SLOT TERBAIK DAN TERPERCAYA DI INDONESIA DENGAN BONUS - BONUS TANPA BATAS SETIAP HARI.</marquee>
             <div class="movie-list-container">
                 <h1 class="movie-list-title">Bukti WD, 22 September 2024</h1>
                 <div class="movie-list-wrapper">
